# Hexadone

./: README.md
universal_ingestion_agent/: README.md  pyproject.toml
universal_ingestion_agent/src/ingestion_agent/: cli.py  main.py
universal_ingestion_agent/src/ingestion_agent/adapters/: api_adapter.py  api_adapter_simple.py  base_adapter.py  minio_adapter.py
universal_ingestion_agent/src/ingestion_agent/configs/: client_test_vars.yml  client_vars.yml  github_test_vars.yml
universal_ingestion_agent/src/ingestion_agent/engines/: spark_manager.py  transfromation.py
universal_ingestion_agent/src/ingestion_agent/templates/: minio_adapter.yml  rest_api_adapter.yml  rest_api_adapter_simple.yml
universal_ingestion_agent/src/ingestion_agent/utils/: adapter_factory.py  config_validator.py  template_engine.py  writer_factory.py
universal_ingestion_agent/src/ingestion_agent/writers/: base_writer.py  csv_writer.py  delta_writer.py  jdbc_writer.py  parquet_writer.py
universal_ingestion_agent/tests/: conftest.py
universal_ingestion_agent/tests/fixtures/: sample_api_response.json
universal_ingestion_agent/tests/integration/: test_adapter_factory.py  test_template_engine.py
universal_ingestion_agent/tests/unit/: test_base_adapter.py  test_minio_adapter.py  test_rest_api_adapter.py
